# learning-on-public

./: .gitignore  INDEX.md  LICENSE  README.md
Awareness/: x-if-or.py
Exercises/: Problem11.py  Problem12.py  Problem19.py  Problem8.py
Exercises/Codeforces/: 1.py  10A.py  11A.py  17A.py  18A.py  1915B.py  3A.py  5A.py  6A.py  7A.py  8A.py  template.ipynb
Exercises/Leetcode/: add-two-numbers.ipynb  best-time-to-buy-and-sell-stock.py  contains-duplicate-iii-slow.py  contains-duplicate-iii-uses-sortedcontainers.py  furthest-building-you-can-reach.ipynb  input-array-3.txt  input-heights.txt  input_matrix.txt  longest-substring-without-repeating-characters-shorten.py  meeting-rooms-ii.py  minimum-windows-substring.py  non-overlapping-intervals.py
Exercises/Others/: Problem14.py  Problem16.py  Problem19_short.py  Problem7.py  Problem9.py
Exercises/Testing/: problem21.py
Lessons/basics/: 6.1-operators-arith.py  x-decorators.py
Lessons/fastapi/: x-forms.py
Lessons/py-modules/: x-colorama.py  x-regex.py
Projects/: face_detection.py  keyboard_presser.py  parse_spoj_page.py
Projects/Marks Crawler/: main.py
Projects/api_tldr/: main.py  plan.txt
Projects/monitor-mobile/: web-socket-test.py
Projects/quiz_app/: data.txt  index.html  (+1 more)
SPOJ/: VLN_short.py
advanced/: x-classmethod.py  x-doctests.py
basics/: 2.2-variables.py  2.3-input_split.py  4-types_and_casting.py  5-more_types.py  x-class.py  x-sys.py  x-unpack.py
learning/topic-labs/packaging/project_1/: pyproject.toml
py-modules/: x-collections.py  x-dafaultdict.py  x-namedtuple.py  x-regex.py
(+324 files in other folders)
